# Proyecto_Data_Analisis_Series_Peliculas_Netflix

./: README.md  main.py  pyproject.toml
Dataset/: netflix_titles_procesado.csv
NoteBook/: analisis.ipynb
